# rosettashark

./: .clineignore  .gitignore  QUICKSTART.md  README.md  pyproject.toml  runtime.yaml
.devcontainer/: devcontainer.json
.specify/memory/: constitution.md
agents/: README.md
agents/orchestration/: README.md
books/cookbook/: README.md
books/notebook/: README.md
books/patternbook/: README.md
books/rulebook/: README.md
books/rulebook/grammars/_examples/: protocol_x_v1.md
docker/: Dockerfile  README.md
docs/: setup.md
interpreters/: README.md
labs/: Dockerfile.pcap  README.md
scopes/: README.md
scripts/: README.md
skills/: README.md
specs/: implementation-plan.md  system-implementation-plan.md  system-implementation-technical-design.md  system-requirements-specification.md
specs/001-phase1-mvp-tasks/: plan.md  research.md  spec.md  tasks.md
specs/001-phase1-mvp-tasks/checklists/: requirements.md  status.md
tools/: README.md
validation/: README.md
