[project]
name = "reshark"
version = "0.1.0"
description = "Autonomous protocol reverse-engineering system using OpenHands + Docker + LangGraph"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "reShark Team", email = "team@reshark.dev" }
]
keywords = ["protocol", "reverse-engineering", "pcap", "network-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

# Core dependencies (Phase 1)
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "scapy>=2.5.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
# Phase 2 dependencies (LangGraph + Patternbook)
phase2 = [
    "langgraph>=0.0.50",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
]

# Tool dependencies (OpenHands, etc.)
tools = [
    "openhands>=0.1.0",
    "ipython>=8.20.0",
    "jupyterlab>=4.0.0",
]

# All optional dependencies combined
all = [
    "reshark[phase2,dev,tools]",
]

[project.scripts]
# CLI entry points
reshark = "reshark.cli.main:main"
reshark-analyze = "reshark.cli.analyze:main"
reshark-lint-grammar = "reshark.cli.lint_grammar:main"

[project.urls]
Homepage = "https://github.com/reshark/reshark"
Documentation = "https://reshark.readthedocs.io"
Repository = "https://github.com/reshark/reshark"
Issues = "https://github.com/reshark/reshark/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.uv]
# Specify Python version for uv
python-version = "3.12"

# uv workspace configuration (if using workspaces in future)
# dev-dependencies = [
#     "pytest>=8.0.0",
#     # ... other dev deps
# ]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-n", "auto",  # Use all CPU cores with pytest-xdist
    "--maxfail=5",
    "--durations=10",
    "--cov=reshark",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (slower, may use tshark)",
    "slow: Tests that take >5 seconds",
    "requires_tshark: Tests that require tshark installed",
]

[tool.coverage.run]
source = ["reshark"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "scapy.*",
    "qdrant_client.*",
    "sentence_transformers.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "S101", # Use of assert detected (we use assert in tests)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # Allow assert in tests
    "D",     # Don't require docstrings in tests
]
"scripts/**/*.py" = [
    "D",     # Don't require docstrings in scripts
]

[tool.ruff.pydocstyle]
convention = "google"
